fix(packages/sui-studio): wrong padding placement

--- a/packages/sui-studio/src/components/workbench/_style.scss
+++ b/packages/sui-studio/src/components/workbench/_style.scss
@@ -1,7 +1,7 @@
 .sui-StudioWorkbench {
   &-navigation {
     background: $c-white;
-    padding: 16px;
+    padding: 0;
     border-bottom: solid 1px $c-gray-lightest;
   }
 }
